[tool.poetry]
name = "3DEngine"
version = "0.1.0"
description = "3DEngine written on python"
authors = ["Danila Anisimov <danilych008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
black = "^23.3.0"
ruff = "^0.0.275"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"